setup initial site

--- a/index.html
+++ b/index.html
@@ -1,11 +1,172 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Our B</title>
+	<title>OurB</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+	<link href="https://fonts.googleapis.com/css?family=Carrois+Gothic|Permanent+Marker" rel="stylesheet">
 </head>
 <body>
-
+	<div class="container-fluid white">
+		<div class='row'>
+			<div class='col col-lg-6'>
+				column 1
+			</div>
+			<div class='col col-lg-6'>
+				"A City Building Network"
+			</div>
+		</div>
+	</div>
+	<div class="container-fluid green">
+		<div class='row'>
+			<div class='col col-lg-6'>
+				column 1
+			</div>
+			<div class='col col-lg-6'>
+				column 2
+			</div>
+		</div>		
+	</div>
+	<div class="container-fluid white">
+		<div class='row'>
+			<div class='col col-lg-6'>
+				OUR/B aims to bring citizens, planners, inverstors, and city officials
+				together to share and discuss knowledge in order to create connections and
+				inspire a collective development of a city
+			</div>
+			<div class='col col-lg-6'>
+				column 2
+			</div>
+		</div>
+	</div>
+	<div class="container-fluid orange">
+		<div class='row'>
+			<div class='col col-lg-6'>
+				column 1
+			</div>
+			<div class='col col-lg-6'>
+				column 2
+			</div>
+		</div>
+	</div>
+	<div class="container-fluid grey">
+		<div class='row'>
+			<div class='col col-lg-6'>
+				column 1
+			</div>
+			<div class='col col-lg-6'>
+				Based on an interactive map
+			</div>
+		</div>
+	</div>
+	<div class="container-fluid white">
+		<div class='row'>
+			<div class='col col-lg-6'>
+				column 1
+			</div>
+			<div class='col col-lg-6'>
+				sketch your ideas, leave comments, upload your proposels.
+			</div>
+		</div>
+	</div>
+	<div class="container-fluid green">
+		<div class='row'>
+			<div class='col col-lg-6'>
+				column 1
+			</div>
+			<div class='col col-lg-6'>
+				follow us on social media
+			</div>
+		</div>
+	</div>
+	<div class="container-fluid white">
+		<div class='row'>
+			<div class='col col-lg-6'>
+				column 1
+			</div>
+			<div class='col col-lg-6'>
+			</div>
+		</div>
+	</div>
+	<div class="container-fluid grey">
+		<div class='row'>
+			<div class='col col-lg-6'>
+				column 1
+			</div>
+			<div class='col col-lg-6'>
+				we are four international students of architecture at K.U Leuven
+			</div>
+		</div>
+	</div>
+	<div class="container-fluid grey">
+		<div class='row'>
+			<div class='col col-lg-3'>
+				column 1
+			</div>		
+			<div class='col col-lg-3'>
+				column 2
+			</div>		
+			<div class='col col-lg-3'>
+				column 2
+			</div>	
+			<div class='col col-lg-3'>
+				column 4
+			</div>
+		</div>
+	</div>
+	<div class="container-fluid green">
+		<div class="row">
+			<div class='col col-lg-6'>
+				<h1>Stay tuned</h1>
+				<h3>Ourb is currently in development. Subscribed to our newsletter
+				to stay informed!</h3>
+				</div>
+			<div class='col col-lg-6'>
+				column 2
+			</div>
+		</div>
+		<div class='row'>
+			<div class='col col-lg-6'>
+				<button type="button" class="btn btn-default">FOLLOW on Facebook</button>
+				<h2>Subscribe to our newsletter.</h2>
+				<div class="form-group row">
+				 	<label for="example-text-input" class="col-2 col-form-label">Text</label>
+				 	<div class="col-10">
+						<input class="form-control" type="text" value="Artisanal kale" id="example-text-input">
+					</div>
+				</div>
+				<div class="form-group row">
+					<label for="example-search-input" class="col-2 col-form-label">Search</label>
+					<div class="col-10">
+						<input class="form-control" type="search" value="How do I shoot web" id="example-search-input">
+					</div>
+				</div>
+				<div class="form-group row">
+					<label for="example-email-input" class="col-2 col-form-label">Email</label>
+					<div class="col-10">
+						<input class="form-control" type="email" value="bootstrap@example.com" id="example-email-input">
+					</div>
+				</div>
+				<button type="button" class="btn btn-default">Subscribe</button>
+			</div>
+			<div class='col col-lg-6'>
+				column 2
+			</div>
+		</div>
+	</div>
+	<div class="container-fluid orange">
+		<div class='row'>
+			<div class='col col-lg-6'>
+				column 1
+			</div>
+			<div class='col col-lg-6'>
+				column 2
+			</div>
+		</div>
+	</div>
 <script type="text/javascript" src="index.js"></script>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
 </body>
 </html>
