--- a/index.html
+++ b/index.html
@@ -7,45 +7,54 @@
 	<link href="https://fonts.googleapis.com/css?family=Carrois+Gothic|Permanent+Marker" rel="stylesheet">
 </head>
 <body>
-	<div class="container-fluid white">
-		<div class='row'>
-			<div class='col col-lg-6'>
-				column 1
-			</div>
-			<div class='col col-lg-6'>
-				"A City Building Network"
+	<nav class="nav nav-pills nav-justified">
+	 	<a class="nav-item nav-link active" href="#">Active</a>
+	 	<a class="nav-item nav-link" href="#">Link</a>
+	 	<a class="nav-item nav-link" href="#">Link</a>
+	 	<a class="nav-item nav-link disabled" href="#">Disabled</a>
+	</nav>
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col-12">
+				<img id="intro" src="LANDING PAGE1.jpg" class="img-fluid hero" alt="Responsive image">
 			</div>
 		</div>
 	</div>
-	<div class="container-fluid green">
-		<div class='row'>
-			<div class='col col-lg-6'>
-				column 1
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col-12">
+				<img id="intro" src="crowd.jpg" class="img-fluid hero" alt="Responsive image">
 			</div>
-			<div class='col col-lg-6'>
-				column 2
-			</div>
+		</div>
 		</div>		
 	</div>
 	<div class="container-fluid white">
-		<div class='row'>
-			<div class='col col-lg-6'>
+		<div class='row align-items-center'>
+			<div class='col col-lg-6 '>
 				OUR/B aims to bring citizens, planners, inverstors, and city officials
 				together to share and discuss knowledge in order to create connections and
-				inspire a collective development of a city
+				inspire a collective development of a city				
 			</div>
 			<div class='col col-lg-6'>
-				column 2
+				<img id="minImgHeight" src="3.png">
 			</div>
 		</div>
 	</div>
 	<div class="container-fluid orange">
 		<div class='row'>
 			<div class='col col-lg-6'>
-				column 1
+				<img src="dream.jpg">
 			</div>
 			<div class='col col-lg-6'>
-				column 2
+				<img src="dream.jpg">
+			</div>
+		</div>
+		<div class='row'>
+			<div class='col col-lg-6'>
+				<img src="dream.jpg">
+			</div>
+			<div class='col col-lg-6'>
+				<img src="dream.jpg">
 			</div>
 		</div>
 	</div>
@@ -61,10 +70,10 @@
 	</div>
 	<div class="container-fluid white">
 		<div class='row'>
-			<div class='col col-lg-6'>
+			<div class='col col-sm-6'>
 				column 1
 			</div>
-			<div class='col col-lg-6'>
+			<div class='col col-sm-6'>
 				sketch your ideas, leave comments, upload your proposels.
 			</div>
 		</div>
