--- a/index.html
+++ b/index.html
@@ -7,33 +7,71 @@
 	<!-- font awesome -->
 	<script src="https://use.fontawesome.com/d1ae525a47.js"></script>
 	<!-- fonts -->
-	<link href="https://fonts.googleapis.com/css?family=Raleway:400,700" rel="stylesheet">
-
+	<link href="https://fonts.googleapis.com/css?family=Carrois+Gothic|Permanent+Marker" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700" rel="stylesheet">
 	<!-- css -->
 	<style type="text/css">
 		#content{
-			padding-top: 20%;
-			padding-bottom: 10%;
+			padding-top: 15%;
+			padding-bottom: 20%;
 			text-align: center;
 			text-shadow: 0px 4px 3px rgba(0,0,0,0.4),
 						 0px 8px 13px rgba(0,0,0,0.2),
 						 0px 18px 23px rgba(0,0,0,0.1);
+			color: #ffffff;
 		}
 
 		body {
-			font-family: 'Raleway', sans-serif;
-			color: #FFFFFF;
+			padding-top: 50px;
+			color: black;
+			font-family: 'Roboto', sans-serif;
+			font-weight: 300;
+			letter-spacing: .1em;
 		}
 
 		#hero {
-			background-image: url("https://images.unsplash.com/photo-1504212620742-503da6e23ce0?auto=format&fit=crop&w=2255&q=60&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D");
+			background-image: 
+		    linear-gradient(
+		      rgba(0, 0, 0, 0.5),
+		      rgba(0, 0, 0, 0.5)
+		    ),
+		    url("https://images.unsplash.com/photo-1476036840956-982d94275a3a?auto=format&fit=crop&w=2550&q=80");
+			background-size: cover;
+			height: 100vh;
+		}
+
+		#quotes {
+			background-image: 
+/*		    linear-gradient(
+		      rgba(0, 0, 0, 0.5),
+		      rgba(0, 0, 0, 0.5)
+		    ),*/
+		    url("quotes.png");
 			background-size: cover;
 			background-position: center;
+			min-height: 600px;
 		}
+
+		#about {
+/*			background-image: 
+		    linear-gradient(
+		      rgba(0, 0, 0, 0.5),
+		      rgba(0, 0, 0, 0.5)
+		    ),
+		    url("https://images.unsplash.com/photo-1465805139202-a644e217f00e?auto=format&fit=crop&w=1950&q=80");
+		    color: #FFFFFF;*/
+		}	
 
 		h1 {
 			font-weight: bold;
-			font-size: 5em;
+			font-size: 7em;
+			font-family: 'Permanent Marker', cursive;
+		}
+
+
+		h2 {
+			font-weight: 300;
+			font-size: 3em;
 		}
 
 		.navbar-inverse .navbar-nav>li>a {
@@ -57,11 +95,7 @@
 		.container {
 			width: 100%;
 			padding: 5% 5%;
-		}
-
-		#about {
-			color: black;
-		}		
+		}	
 		#section1 {
 			color: black;
 		}		
@@ -73,6 +107,28 @@
 		}		
 		#team {
 			color: black;
+		}
+		#thirdPic {
+			width: 70%;
+		}
+
+		nav {
+			padding-left: 5%;
+			padding-right: 5%;
+		}
+
+		.feature-intro h2{
+			margin-left: 15%;
+			margin-right: 15%;
+		}
+
+		.feature-intro p{
+			margin-left: 20%;
+			margin-right: 20%;
+		}
+
+		#whiteboard {
+			font-family: 'Permanent Marker', cursive;
 		}
 	</style>
 </head>
@@ -98,7 +154,6 @@
 	      </ul>
 	      <ul class="nav navbar-nav navbar-right">
 	        <li><a href="#"><i class="fa fa-user-plus" aria-hidden="true"></i> Sign Up</a></li>
-	        <li><a href="#"><i class="fa fa-sign-in" aria-hidden="true"></i> Login</a></li>
 	      </ul>
 	    </div><!-- /.navbar-collapse -->
 	</nav>
@@ -106,13 +161,9 @@
 		<div class="row">
 			<div class="col-lg-12">
 				<div id="content">
-					<h1>OURB</h1>
+					<h1>OUR/B</h1>
 					<hr>
-					<h3>"A City Building Network"</h3>
-					<button type="button" class="btn btn-default btn-lg">
-					  <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
-					  Click Me!
-					</button>
+					<h3>A City Building Network</h3>
 				</div>	
 			</div>
 		</div>
@@ -124,8 +175,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="feature-intro text-center">
-                            <h1 class="margin-auto">Your Neighborhood's Crowd Sourcing Tool</h1>
-                            <p>OUR/B AIMS TO BRING CITIZENS, PLANNERS, INVESTORS, AND CITY OFFICIALS TOGETHER TO SHARE AND DISCUSS KNOWLEDGE IN ORDER TO CREATE CONNECTIONS AND INSPIRE A COLLECTIVE DEVELOPMENT OF A CITY.</p>
+                            <h2 class="margin-auto"><span id="whiteboard">OUR/B</span> BRINGS CITIZENS, PLANNERS, INVESTORS, AND CITY OFFICIALS <span id="whiteboard">TOGETHER</span>, IN ORDER TO INSPIRE A COLLECTIVE DEVELOPMENT OF A <span id="whiteboard">CITY</span>.</h2>
                             <div class="video-icon"><i class="pe-7s-play pe-5x pe-va"></i></div>
                         </div>
                     </div>
@@ -133,12 +183,12 @@
             </div>
 
             <!-- features -->
-            <div class="container">
+            <!-- <div class="container">
                 <div class="features">
                     <div class="row">
                         <div class="col-md-4">
                             <div class="single-content text-center ">
-                                <div class="feature-icon"><i class="fa fa-download"></i></div>
+                                <img id="thirdPic" src="think.png">
                                 <h3>BRAINSTORM</h3>
                                 <p>
                                     Probant malis deserunt commodo labore labore do pariatur, concursionibus singulis
@@ -148,7 +198,7 @@
                         </div>
                         <div class="col-md-4 feature-border">
                             <div class="single-content text-center ">
-                                <div class="feature-icon"><i class="fa fa-cloud"></i></div>
+                                <img id="thirdPic" src="design.jpg">
                                 <h3>DESIGN</h3>
                                 <p>
                                     Probant malis deserunt commodo labore labore do pariatur, concursionibus singulis
@@ -158,7 +208,7 @@
                         </div>
                         <div class="col-md-4">
                             <div class="single-content text-center ">
-                                <div class="feature-icon"><i class="fa fa-area-chart"></i></div>
+                                <img id="thirdPic" src="invest.jpg">
                                 <h3>INVEST</h3>
                                 <p>
                                     Probant malis deserunt commodo labore labore do pariatur, concursionibus singulis
@@ -167,10 +217,15 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </section><!-- end about -->
+
+    <section id= "quotes">
+    	
+
+    </section>
 
     <!-- Content section 1 -->
     <section id="section1">
