make navbar transparent

--- a/index.html
+++ b/index.html
@@ -85,6 +85,14 @@
 		.navbar-inverse .navbar-brand {
 			color: #FFFFFF;
 		}
+		
+		.navbar {
+			 background-color: transparent;
+			 background: transparent;
+			 border-color: transparent;
+		}
+
+		.navbar li { color: #000 } 
 
 		html {
 			height: 100%;
