fix mobile view

--- a/www/index.html
+++ b/www/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>OURB | A City Building Network</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<!-- Latest compiled and minified CSS -->
@@ -510,8 +513,15 @@
                                 </div>
                                 <div class="col-sm-12">
                                     <div class="form-group">
-                                        <input type="submit" href="#" class="button button--shikoba button--text-medium button--round-l button--inverted"></input>
-                                        <a type="button" href="https://www.facebook.com/OURB16" class="button button--shikoba button--text-medium button--round-l button--inverted"><span>Facebook!&nbsp&nbsp</span><i class="fa fa-facebook-square" aria-hidden="true"></i></a>
+                                    	<div class="row">
+                                    		<div class="col-sm-6 col-xs-12">
+                                    			<input type="submit" href="#" class="button button--shikoba button--text-medium button--round-l button--inverted"></input>
+                                    		</div>
+                                    		<div class="col-sm-6 col-xs-12">
+                                        		<a type="button" href="https://www.facebook.com/OURB16" class="button button--shikoba button--text-medium button--round-l button--inverted"><span>Facebook!&nbsp&nbsp</span><i class="fa fa-facebook-square" aria-hidden="true"></i></a>	
+                                        	</div>
+                                    	</div>
+
                                     </div>
                                 </div>
                             </form>
