separate out js and css files

--- a/www/index.html
+++ b/www/index.html
@@ -16,49 +16,6 @@
 	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<!-- css -->
-
-    <script type="text/javascript">
-        $(document).ready(function(){       
-           var scroll_start = 0;
-           var startchange = $('#about');
-           var offset = startchange.offset();
-           
-        if (startchange.length){
-           $(document).scroll(function() { 
-              scroll_start = $(this).scrollTop();
-              if(scroll_start > offset.top) {
-                  $(".navbar-inverse").css('background-color', '#000000');
-               } else {
-                  $('.navbar-inverse').css('background-color', 'transparent');
-               }
-           });
-
-
-            }
-
-
-            (function($) {
-            var $window = $(window),
-                $va1 = $('#va');
-                $va2 = $('#va2');
-
-            function resize() {
-                if ($window.width() < 768) {
-                    $va2.removeClass('vertical-align')
-                    return $va1.removeClass('vertical-align');
-                }
-
-                $va1.addClass('vertical-align');
-                $va2.addClass('vertical-align');
-                }
-    
-                $window
-                    .resize(resize)
-                    .trigger('resize');
-                })(jQuery);
-
-        });  
-    </script>
 </head>
 <body>
 	<nav class="navbar navbar-fixed-top navbar-inverse">
@@ -287,10 +244,5 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 <!-- GRT Youtube Popup -->
 <script src="grt-youtube-popup.js"></script>
-<script>
-            $(".youtube-link").grtyoutube({
-                autoPlay:true,
-                theme: "dark"
-            });
-    </script>
+<script type="text/javascript" src="code.js"></script>
 </html>
