--- a/www/index.html
+++ b/www/index.html
@@ -60,7 +60,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="feature-intro text-center">
-                            <h2><span id="whiteboard">OUR/B</span> BRINGS CITIZENS, PLANNERS, INVESTORS, AND CITY OFFICIALS <span id="whiteboard">TOGETHER</span>, IN ORDER TO INSPIRE A COLLECTIVE DEVELOPMENT OF A <span id="whiteboard">CITY</span>.</h2>
+                            <h2><span id="whiteboard">OURB</span> BRINGS CITIZENS, PLANNERS, INVESTORS, AND CITY OFFICIALS <span id="whiteboard">TOGETHER</span>, IN ORDER TO INSPIRE A COLLECTIVE DEVELOPMENT OF A <span id="whiteboard">CITY</span>.</h2>
                         </div>
                     </div>
                 </div>
@@ -78,7 +78,7 @@
                     <div class="text-center description">
                         <h2>Based on an interactive map</h2>
                         <h3>
-                            Highlight crucial areas of your city and then consult with neighbors about ideas, resources, and challenges.
+                            Highlight crucial areas of your city and consult with neighbors about ideas, resources, and challenges.
                         </h3>
                     </div>
                 </div>
@@ -104,9 +104,9 @@
                 </div>
                 <div class="col-md-5 col-xs-12">
                     <div class="text-center description">
-                        <h2>Sketch your ideas, leave comments, and upload your proposals</h2>
+                        <h2>Sketch ideas, leave comments, upload proposals</h2>
                         <h3>
-                           Vote on the proposals as a neighborhood and bring them to the attention of investors and city officials. All from your phone or laptop.
+                           Vote on the proposals as a neighborhood and bring them to the attention of investors and city officials.
                         </h3>
                     </div>
                 </div>
@@ -116,14 +116,13 @@
         <!-- end container -->
     </section>
     <!-- end Content section 2 -->
-
 <!--  Team Seciont -->
     <section id="team" class="section">
         <div class="container">
             <div class="row">
                 <div class="col-md-8 col-md-offset-2 text-center">
                     <h2 class="pads">The Team</h2>
-                    <h3 class= "pad">We are four international students of architecture at K.U. Leuven</h3>
+                    <h3 class= "pad">We are four international architects.</h3>
                 </div>
             </div>
             <div class="row">
@@ -133,7 +132,7 @@
                             <img class="img-circle padd" src="Mara.jpg" alt="team">
                             <div class="leader-overflow text-left">
                                 <strong>Mara Usai</strong>
-                                <div>CEO / Co - founder</div>
+                                <div>Co-Founder</div>
                             </div>
                         </div>
                     </div>
@@ -144,7 +143,7 @@
                             <img class="img-circle padd" src="Tonia.jpg" alt="team">
                             <div class="leader-overflow text-left">
                                 <strong>Tonia Dalle</strong>
-                                <div>SEO / Web Designer</div>
+                                <div>Co-Founder</div>
                             </div>
                         </div>
                     </div>
@@ -155,7 +154,7 @@
                             <img class="img-circle padd" src="Dieter.jpg" alt="team">
                             <div class="leader-overflow text-left">
                                 <strong>Dieter Michielsen</strong>
-                                <div>CMO / Developer</div>
+                                <div>Co-Founder</div>
                             </div>
                         </div>
                     </div>
@@ -166,7 +165,7 @@
                             <img class="img-circle padd" src="Rosie.jpg" alt="team">
                             <div class="leader-overflow text-left">
                                 <strong>Rosie Romero</strong>
-                                <div>ACM / Menager</div>
+                                <div>Co-Founder</div>
                             </div>
                         </div>
                     </div>
@@ -176,8 +175,8 @@
                         <div class="">
                             <img class="img-circle padd" src="Desi.jpg" alt="team">
                             <div class="text-left">
-                                <strong>Desi Usalle</strong>
-                                <div>ACM / Menager</div>
+                                <strong>Desi Petkova</strong>
+                                <div>Co-Founder</div>
                             </div>
                         </div>
                     </div>
@@ -193,7 +192,7 @@
             <div class="row">
                 <div class="contact-overlay">
                     <div class="col-md-offset-3 col-md-6 text-center">
-                        <h1 class="section-title border-bottom">Get in Touch</h1>
+                        <h2 class="section-title border-bottom" id="whiteboard">Get in Touch</h2>
                         <h3 class="pad">Interested in learning more? Send us an email or connect with us on facebook!</h3>
                         <div class="row">
                             <form name="form1" action="mailto:jordboudreau@gmail.com" enctype="text/plain" method="POST">
