update team section

--- a/www/index.html
+++ b/www/index.html
@@ -128,54 +128,54 @@
             <div class="row">
                 <div class="col-md-2 col-sm-6 col-xs-12 col-md-offset-1">
                     <div class="text-center">
-                        <div class="">
+                        <div class="card">
                             <img class="img-circle padd" src="Mara.jpg" alt="team">
                             <div class="leader-overflow text-left">
-                                <strong>Mara Usai</strong>
+                                <strong>Mara <br>Usai</strong>
                                 <div>Co-Founder</div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-2 col-sm-6 col-xs-12">
+                <div class="col-md-2 col-sm-6 col-xs-12 ">
                     <div class="text-center">
-                        <div class="">
+                        <div class="card">
                             <img class="img-circle padd" src="Tonia.jpg" alt="team">
                             <div class="leader-overflow text-left">
-                                <strong>Tonia Dalle</strong>
+                                <strong>Tonia <br>Dalle</strong>
                                 <div>Co-Founder</div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-2 col-sm-6 col-xs-12">
+                <div class="col-md-2 col-sm-6 col-xs-12 ">
                     <div class="text-center">
-                        <div class="">
+                        <div class="card">
                             <img class="img-circle padd" src="Dieter.jpg" alt="team">
                             <div class="leader-overflow text-left">
-                                <strong>Dieter Michielsen</strong>
+                                <strong>Dieter <br>Michielsen</strong>
                                 <div>Co-Founder</div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-2 col-sm-6 col-xs-12">
+                <div class="col-md-2 col-sm-6 col-xs-12 ">
                     <div class="text-center">
-                        <div class="">
+                        <div class="card">
                             <img class="img-circle padd" src="Rosie.jpg" alt="team">
                             <div class="leader-overflow text-left">
-                                <strong>Rosie Romero</strong>
+                                <strong>Rosie <br>Romero</strong>
                                 <div>Co-Founder</div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-2 col-sm-6 col-xs-12">
+                <div class="col-md-2 col-sm-6 col-xs-12 ">
                     <div class="text-center">
-                        <div class="">
+                        <div class="card">
                             <img class="img-circle padd" src="Desi.jpg" alt="team">
                             <div class="text-left">
-                                <strong>Desi Petkova</strong>
+                                <strong>Desi <br>Petkova</strong>
                                 <div>Co-Founder</div>
                             </div>
                         </div>
