--- a/www/index.html
+++ b/www/index.html
@@ -27,12 +27,12 @@
 	        <span class="icon-bar"></span>
 	        <span class="icon-bar"></span>
 	      </button>
-	      <a class="navbar-brand" href=""></i><span id="whiteboard">OURB</span></a>
 	    </div>
 
 	    <!-- Collect the nav links, forms, and other content for toggling -->
 	    <div class="collapse navbar-collapse" id="hamburg">
 	      <ul class="nav navbar-nav">
+	      	<li><a href=""><span id="whiteboard">OURB</span></a></li>
 	        <li><a href="#about">About</a></li>
 	        <li><a href="#form">Contact</a></li>
 	      </ul>
@@ -45,9 +45,8 @@
 		<div class="row">
 			<div class="col-lg-12">
 				<div id="content">
-					<h1>OURB</h1>
-					<hr>
-					<h3>A City Building Network</h3>
+					<img id="logo" src="logo.png">
+					<h2 id="whiteboard" >A City Building Network</h2>
                     <button id="video-btn" type="button" href="#" class="youtube-link button button--shikoba button--text-medium button--round-l button--inverted" youtubeid="UGXTARPH30E"><span>Play Video</span></button>
 				</div>	
 			</div>
