--- a/www/index.html
+++ b/www/index.html
@@ -73,17 +73,17 @@
     <section class="section">
         <div class="container">
             <div id="va" class="row vertical-align">
-                <div class="col-md-5 col-md-offset-1 col-xs-12">
+                <div class="col-md-6 col-md-offset-1 col-xs-12 col-sm-push-5">
+                    <div class="content-iphone">
+                        <img class="img-responsive img-center" src="map.png" alt="iphone">
+                    </div>
+                </div>
+                <div class="col-md-5 col-md-offset-1 col-xs-12 col-sm-pull-7">
                     <div class="text-center description">
                         <h2>Based on an interactive map</h2>
                         <h3>
                             Highlight crucial areas of your city and consult with neighbors about ideas, resources, and challenges.
                         </h3>
-                    </div>
-                </div>
-                <div class="col-md-6 col-md-offset-1 col-xs-12">
-                    <div class="content-iphone">
-                        <img class="img-responsive img-center" src="map.png" alt="iphone">
                     </div>
                 </div>
             </div>
