--- a/www/index.html
+++ b/www/index.html
@@ -124,8 +124,8 @@
                     <h3 class= "pad">We are four international architects.</h3>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-md-2 col-sm-6 col-xs-12 col-md-offset-1">
+            <div id="teamshit" class="row lefty">
+                <div class="col-md-2 col-sm-6 col-xs-12 none">
                     <div class="text-center">
                         <div class="card">
                             <img class="img-circle padd" src="Mara.jpg" alt="team">
@@ -136,7 +136,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-2 col-sm-6 col-xs-12 ">
+                <div class="col-md-2 col-sm-6 col-xs-12 none">
                     <div class="text-center">
                         <div class="card">
                             <img class="img-circle padd" src="Tonia.jpg" alt="team">
@@ -147,7 +147,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-2 col-sm-6 col-xs-12 ">
+                <div class="col-md-2 col-sm-6 col-xs-12 none">
                     <div class="text-center">
                         <div class="card">
                             <img class="img-circle padd" src="Dieter.jpg" alt="team">
@@ -158,7 +158,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-2 col-sm-6 col-xs-12 ">
+                <div class="col-md-2 col-sm-6 col-xs-12 none">
                     <div class="text-center">
                         <div class="card">
                             <img class="img-circle padd" src="Rosie.jpg" alt="team">
@@ -169,7 +169,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-2 col-sm-6 col-xs-12 ">
+                <div class="col-md-2 col-sm-6 col-xs-12 none">
                     <div class="text-center">
                         <div class="card">
                             <img class="img-circle padd" src="Desi.jpg" alt="team">
