--- a/www/index.html
+++ b/www/index.html
@@ -59,7 +59,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="feature-intro text-center">
-                            <h2><span id="whiteboard">OURB</span> BRINGS CITIZENS, PLANNERS, INVESTORS, AND CITY OFFICIALS <span id="whiteboard">TOGETHER</span>, IN ORDER TO INSPIRE A COLLECTIVE DEVELOPMENT OF A <span id="whiteboard">CITY</span>.</h2>
+                            <h2 id="dev"><span id="whiteboard">OURB</span> BRINGS CITIZENS, PLANNERS, INVESTORS, AND CITY OFFICIALS <span id="whiteboard">TOGETHER</span>, IN ORDER TO INSPIRE A collective development OF A <span id="whiteboard">CITY</span>.</h2>
                         </div>
                     </div>
                 </div>
