--- a/www/index.html
+++ b/www/index.html
@@ -194,7 +194,7 @@
                         <h2 class="section-title border-bottom" id="whiteboard">Get in Touch</h2>
                         <h3 class="pad">Interested in learning more? Send us an email or connect with us on facebook!</h3>
                         <div class="row">
-                            <form name="form1" action="mailto:jordboudreau@gmail.com" enctype="text/plain" method="POST">
+                            <form name="form1" action="mailto:info@ourb.be" enctype="text/plain" method="POST">
                                 <div class="col-sm-6">
                                     <div class="form-group">
                                         <label class="sr-only">Your Name</label>
