--- a/www/index.html
+++ b/www/index.html
@@ -121,7 +121,7 @@
             <div class="row">
                 <div class="col-md-8 col-md-offset-2 text-center">
                     <h2 class="pads">The Team</h2>
-                    <h3 class= "pad">We are four international architects.</h3>
+                    <h3 class= "pad">We are five international architects.</h3>
                 </div>
             </div>
             <div id="teamshit" class="row lefty">
